Fixed bug related to add/delete steps/ingredients button visibilty. Adapted Edit Recipe layout for small screens

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -52,6 +52,9 @@ a:hover{
     text-align: center;
 }
 
+.text-muted{
+    color:#444d56 !important;
+}
 /***********BUTTONS*********/
 .btn-sm{
     border-radius: .5rem;
